--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,7 @@
     "angular-mocks": "^1.4.0"
   },
   "appPath": "app",
-  "moduleName": "sdgsDashApp",
+  "moduleName": "sdgsDash",
   "overrides": {
     "bootstrap": {
       "main": [
