--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,9 @@
     "angular-route": "^1.4.0",
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
-    "font-awesome": "^4.7.0"
+    "underscore":"^1.8.3",
+    "font-awesome": "^4.7.0",
+    "angular-nvd3": "^1.0.9"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
