--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "karma-jasmine": "^1.1.0",
     "karma-phantomjs-launcher": "^1.0.4",
     "phantomjs-prebuilt": "^2.1.14",
-    "time-grunt": "^1.0.0"
+    "time-grunt": "^1.0.0",
+    "connect-modrewrite": "^0.9.0"
   },
   "engines": {
     "node": ">=0.10.0"
