--- a/bower.json
+++ b/bower.json
@@ -28,6 +28,12 @@
         "dist/css/bootstrap.css",
         "dist/js/bootstrap.js"
       ]
+    },
+    "font-awesome":{
+      "main": [
+        "css/font-awesome.css",
+        "fonts/*"
+      ]
     }
   }
 }
