--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,7 @@
     "angular-mocks": "^1.4.0"
   },
   "appPath": "app",
-  "moduleName": "sdgsDash",
+  "moduleName": "dgsDash",
   "overrides": {
     "bootstrap": {
       "main": [
