--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "karma-phantomjs-launcher": "^1.0.4",
     "phantomjs-prebuilt": "^2.1.14",
     "time-grunt": "^1.0.0",
-    "connect-modrewrite": "^0.9.0"
+    "connect-modrewrite": "^0.9.0",
+    "grunt-angular-gettext": "^2.3.5"
   },
   "engines": {
     "node": ">=0.10.0"
