--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "angular-gettext": "^2.3.10",
     "underscore":"^1.8.3",
     "font-awesome": "^4.7.0",
-    "angular-nvd3": "^1.0.9"
+    "angular-nvd3": "^1.0.9",
+    "ngInfiniteScroll": "^1.3.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
