--- a/bower.json
+++ b/bower.json
@@ -13,10 +13,13 @@
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
     "angular-gettext": "^2.3.10",
+    "angular-nvd3": "^1.0.9",
+    "ngInfiniteScroll": "^1.3.0",
     "underscore":"^1.8.3",
     "font-awesome": "^4.7.0",
-    "angular-nvd3": "^1.0.9",
-    "ngInfiniteScroll": "^1.3.0"
+    "ui-leaflet": "^2.0.0",
+    "leaflet": "^1.1.0",
+    "topojson": "^3.0.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
@@ -37,5 +40,8 @@
         "fonts/*"
       ]
     }
+  },
+  "resolutions": {
+    "leaflet": "^1.1.0"
   }
 }
